# vpp

./: Dockerfile  Makefile  VPP_STARTUP.conf  cleanup.sh  startup-busy-polling.sh  startup.sh  vpp1.conf
src/plugins/dpdk/: CMakeLists.txt
src/plugins/dpdk/device/: driver.c  init.c
